complete pass in only needed external_system_params

--- a/app/views/identity_nation_builder/_service_form_fields.html.erb
+++ b/app/views/identity_nation_builder/_service_form_fields.html.erb
@@ -28,7 +28,7 @@
       $(".event_rsvp_container").show()
       $(".event_rsvp_container select").prop('disabled', false)
       $(".tag_container").hide()
-      $(".tag_container select").prop('disabled', true)
+      $(".tag_container input").prop('disabled', true)
     }
     else{
       $(".event_rsvp_container").hide()
