--- a/app/views/identity_nation_builder/_service_form_fields.html.erb
+++ b/app/views/identity_nation_builder/_service_form_fields.html.erb
@@ -14,6 +14,9 @@
       <br/>
       <%= label_tag "nation_builder[event_id]", 'Event ID: ' %>
       <%= select_tag "nation_builder[event_id]", options_for_select(IdentityNationBuilder::ApplicationHelper.events_for_select), { style: 'width:100%;' } %>
+      <br/>
+      <%= label_tag "nation_builder[mark_as_attended]", 'Mark as attended: ' %>
+      <%= check_box_tag "nation_builder[mark_as_attended]", true, false %>
     </div>
     <div class="tag_container">
       <%= label_tag "nation_builder[tag]", 'Tag Name: ' %>
